fix : added people section and updated code readability

--- a/style.css
+++ b/style.css
@@ -122,26 +122,33 @@ body {
 }
 
 .nav-profile {
-  height: 100%;
   display: flex;
-  flex-flow: row;
-  justify-content: flex-end;
-  width: 20%;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  margin-right: 20px;
   z-index: 1;
 }
 
 .search-icon {
-  padding: 0.875em 2.5em 1.875em 0.625em;
   cursor: pointer;
 }
 
 .avatar {
   height: 30px;
-  padding-top: 2px;
   border-radius: 2.1px;
-  margin-top: 0.6875em;
-  margin-right: 3.125em;
   cursor: pointer;
+}
+
+.darkmodebtn{
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+
+.darkmodebtn i{
+  font-size: 25px;
+  color: rgb(216, 216, 216);
 }
 
 /* Hero section */
